Bug 1224475 - Start agent after seeking. r=baku